# campus_plan_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  EVALUATION.md  LICENSE  PLANNING.md  README.md  TASKS.md  TESTING.md  asr_fixing_failures.html  download_models.py  evaluation_results.csv  pixi.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  eval.yml  package.yml
backend/: app.py  utils.py
campus_plan_bot/: __init__.py  asr_processing.py  audio.md  audio_recorder.py  backend.py  bot.py  cli.py  constants.py  data_picker.py  evaluation.py  interfaces.py  link_extractor.py  llm_client.py  local_asr.py  main.py  pandas_query_engine.py  persistence_types.py  pipeline.py  query_rewriter.py  query_router.py  rag.py  remote_asr.py  reporting.py  settings.py  test_asr.py  text_input.py  transcribe_audio.py  translator.py  types.py
campus_plan_bot/clients/: chute_client.py  example_chute_client.py  institute_client.py
campus_plan_bot/docs/: Components.drawio
campus_plan_bot/input/: audio_recorder.py  local_asr.py  remote_asr.py  text_input.py
campus_plan_bot/interfaces/: interfaces.py  persistence_types.py
campus_plan_bot/prompts/: asr_fixing.md  data_picker_prompt.md  prompt_builder.py  query_router_prompt.md  system_prompt.md  translator_prompt.md  util.py
campus_plan_bot/settings/: settings.py
campus_plan_bot/streamadapter/: ffmpegStreamAdapter.py  ffmpeg_stream_adapter.py  input_stream_adapter.py
data/: campusplan.json  campusplan_enriched.csv  campusplan_evaluation.csv  pixi.toml  prompt.txt  rag_evaluation_dataset.csv
data/embeddings/: docstore.json  index_store.json
data/evaluation/: test_prompt_templates.md
data/nominatim_cache/: 107_details.json  107_reverse.json  109_details.json  109_reverse.json  10_details.json  113_reverse.json  114_details.json  115_details.json  118_details.json  119_reverse.json  11_details.json  120_details.json  125_reverse.json  126_reverse.json  127_reverse.json  129_reverse.json  130_reverse.json  131_details.json  131_reverse.json  132_details.json  135_details.json  136_details.json  138_details.json  139_details.json  139_reverse.json  140_reverse.json  144_reverse.json  145_reverse.json  146_reverse.json  147_reverse.json  148_details.json  151_details.json  152_reverse.json  154_reverse.json  155_reverse.json  157_details.json  158_details.json  158_reverse.json  159_reverse.json  160_details.json  (+289 more)
data/notebooks/: data_experimentation.ipynb  evaluation_data.ipynb  explore_data.ipynb  llm_reformulate.ipynb  manual_data_enhancement.ipynb  select_audio_examples.ipynb
docs/: phase2_report.tex
docs/phase 4/: sdqbeamer.cls
docs/phase3/: ASR Fixing Prompt.md  (+1 more)
eval/: audio.md  create_plots.py  debug_rag.py  evaluate_asr_fixing.py  evaluate_rag.py  evaluation.py  multi_turn_eval.py  phrases.txt  plot_failures.py  reporting.py  transcribe_audio.py  verify_query_rewriting.py  visualize_failures.py
frontend/: index.html
phase1/: .gitattributes  .gitignore  README.md  Untitled.ipynb  data_experimentation.ipynb  evaluation_data.ipynb  explore_data.ipynb  llm_reformulate.ipynb  manual_data_enhancement.ipynb  markers.csv  pixi.toml  select_audio_examples.ipynb
scripts/: create_plots.py  reformat_institutes.py  run_evaluation.sh
tests/: bot_test.py  cli_test.py  conftest.py  dummy_test.py  example_test.py  rag_test.py
(+1715 files in other folders)
